# SymReg

./: .gitignore  BinaryOperator.h  CMakeLists.txt  Expression.h  LICENSE  README.md  SymbolicRegressor.h  TestSymReg.pro  UnaryOperator.h  Variable.h  conanfile.txt  pyproject.toml  setup.py  testsymreg.cpp
.github/workflows/: build.yml  deploy.yml
cmake/: SymRegConfig.cmake.in  config.h.in
include/SymReg/: BinaryOperator.h  Expression.h  SymbolicRegressor.h  UnaryOperator.h  Variable.h
scripts/: test_symreg.py
src/: benchmark.cpp  primes_demo.cpp  python_bindings.cpp
symreg/: __init__.py
tests/: test_symreg.cpp
